# llvm-basics

./: Cargo.toml  README.md  compile.sh
llvm-environment/: Cargo.toml
llvm-environment/src/: env.rs  main.rs
llvm-function/: Cargo.toml
llvm-function/src/: main.rs
llvm-global-vars/: Cargo.toml
llvm-global-vars/src/: main.rs
llvm-hello-world/: Cargo.toml
llvm-hello-world/src/: main.rs
llvm-if-else/: Cargo.toml
llvm-if-else/src/: main.rs
llvm-local-vars/: Cargo.toml
llvm-local-vars/src/: main.rs
llvm-loop/: Cargo.toml
llvm-loop/src/: main.rs
llvm-print/: Cargo.toml
llvm-print/src/: main.rs
llvm-ret/: Cargo.toml
llvm-ret/src/: main.rs
llvm-scope/: Cargo.toml
llvm-scope/src/: main.rs
llvm-structs/: Cargo.toml
llvm-structs/src/: main.rs
src/: main.rs
